@@ -5,6 +5,7 @@ module Nokogiri
         @original_html = original_html
         @node = node
         @document = node.document
+        @direction = 'previous'
         @stack = []
       end
 
@@ -22,7 +23,7 @@ module Nokogiri
         node = @stack.last
         unless node
           node = Nokogiri::XML::Text.new(string, @document)
-          return @node.add_previous_sibling node
+          return @node.send(:"add_#{@direction}_sibling", node)
         end
         node.content += string
       end
